DevTools: Clarify Service Worker 'Update on reload' location in warning

A console warning is displayed if 'Update on reload' is checked in the
DevTools Service Worker pane. This CL updates the wording to clarify
where the 'Update on reload' option can be found in DevTools.

BUG=702973

Review-Url: https://codereview.chromium.org/2762523002
Cr-Commit-Position: refs/heads/master@{#458545}

Former-commit-id: f1aa486c25eb37a418e32d1f00ef43ed1d98f60a